# tauxfo

./: .gitignore  README.md  compute_rates.py  default_use_instructions.txt.txt  get_data.py  get_physicals_and_site_info.py  pyproject.toml  taux_de_fonctionement.py
data/: PASSON.csv  physicals.csv  sites.csv
data/DIDON/: AIXPLA.csv  APT.csv  BOTANI.csv  CARPENTRAS.csv  CHEIRON.csv  CIANS.csv  GARDANNE.csv  LOCAL_01.csv
notebook/: test_csv_append.csv  test_dev.ipynb
request/: get_data.py  get_physicals_and_site_info.py
src/: compute_rates.py  dictionaries.py  example_Ibrahima.py  fonctions.py  get_data.py  get_physicals_and_site_info.py
