[tool.poetry]
name = "tauxfo"
version = "0.1.0"
description = "automatization of operating rate"
authors = ["diac"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
requests = {extras = ["security"], version = "^2.31.0"}
jupyter = "^1.0.0"
datetime = "^5.5"
numpy = "^1.26.4"
tqdm = "^4.66.2"
matplotlib = "^3.8.4"
plotly = "^5.21.0"
scipy = "^1.13.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
